--- a/webapp/src/ionicapp/www/templates/viewDevice.html
+++ b/webapp/src/ionicapp/www/templates/viewDevice.html
@@ -1,9 +1,9 @@
 <ion-view title="View Device" hide-back-button="true" nav-transition="none" id="page13" style="background-color:#FFFFFF;" class="page_width">
   <ion-nav-buttons side="left" class="has-header">
-    <button class="button button-icon icon ion-android-close" ng-click="exitPage()"></button>
+    <button class="button button-icon icon ion-android-close" ng-click="configureDevice()"></button>
   </ion-nav-buttons>
   <ion-nav-buttons side="right" class="has-header">
-    <button class="button button-icon icon ion-trash-b" ng-click="deleteDevice(data.devicename)"></button>
+    <button class="button button-positive icon ion-trash-b" ng-click="deleteDevice(data.devicename)"></button>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="height: 12px;"></div>
@@ -29,7 +29,7 @@
         <p style="color:#444444;font-size:12px;">Last active: {{ data.heartbeat }}</p>
       </div>
     </form>
-    <button id="viewDevice-button46" ng-click="configureDevice()" class="button button-positive button-block">Configure Device</button>
+    <button id="viewDevice-button110" ng-click="setDeviceGeneralSettings()" style="text-align:left;" class="button button-positive button-block icon-right ion-android-arrow-dropright">Set Device General Settings</button>
     <button id="viewDevice-button21" ng-click="getDevice(data.devicename)" style="text-align:left;" class="button button-positive button-block button-outline icon-right ion-android-arrow-dropright">Query Device</button>
     <button id="viewDevice-button56" ng-click="setDevice(data.devicename, &quot;restart&quot;)" style="text-align:left;" class="button button-positive button-block button-outline icon-right ion-android-arrow-dropright">Restart Device</button>
     <button id="viewDevice-button64" ng-click="setDevice(data.devicename, &quot;start&quot;)" style="text-align:left;" class="button button-positive button-block button-outline icon-right ion-android-arrow-dropright">Start Device</button>
