Updated UIs for notification recipient to be readonly and display ****************

--- a/webapp/src/ionicapp/www/templates/anemometer.html
+++ b/webapp/src/ionicapp/www/templates/anemometer.html
@@ -102,7 +102,7 @@
       </label>
       <ion-checkbox id="anemometer-checkbox28" ng-model="data.attributes.notification.endpoints.notification.enable">Send notification to</ion-checkbox>
       <label class="item item-input" id="anemometer-input119">
-        <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.notification.recipients">
+        <input type="text" placeholder="****************" ng-model="data.attributes.notification.endpoints.notification.recipients" readonly="">
       </label>
       <ion-checkbox id="anemometer-checkbox29" ng-model="data.attributes.notification.endpoints.modem.enable">Send to IoT Modem</ion-checkbox>
       <label class="item item-select" id="anemometer-select62">
