--- a/webapp/src/ionicapp/www/templates/deviceGPIO.html
+++ b/webapp/src/ionicapp/www/templates/deviceGPIO.html
@@ -116,7 +116,7 @@
       </label>
       <ion-checkbox id="deviceGPIO-checkbox34" ng-model="data.gpio.notification.endpoints.notification.enable">Send notification to </ion-checkbox>
       <label class="item item-input" id="deviceGPIO-input134">
-        <input type="tel" placeholder="Phone number(s)" ng-model="data.gpio.notification.endpoints.notification.recipients" readonly="">
+        <input type="tel" placeholder="****************" ng-model="data.gpio.notification.endpoints.notification.recipients" readonly="">
       </label>
       <ion-checkbox id="deviceGPIO-checkbox35" ng-model="data.gpio.notification.endpoints.modem.enable">Send to IoT Modem</ion-checkbox>
       <label class="item item-select" id="deviceGPIO-select86">
