--- a/webapp/src/ionicapp/www/templates/potentiometer.html
+++ b/webapp/src/ionicapp/www/templates/potentiometer.html
@@ -111,7 +111,7 @@
       </label>
       <ion-checkbox id="potentiometer-checkbox16" ng-model="data.attributes.notification.endpoints.notification.enable">Send notification to</ion-checkbox>
       <label class="item item-input" id="potentiometer-input116">
-        <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.notification.recipients">
+        <input type="text" placeholder="****************" ng-model="data.attributes.notification.endpoints.notification.recipients" readonly="">
       </label>
       <ion-checkbox id="potentiometer-checkbox17" ng-model="data.attributes.notification.endpoints.modem.enable">Send to IoT Modem</ion-checkbox>
       <label class="item item-select" id="potentiometer-select42">
