--- a/webapp/src/ionicapp/www/templates/deviceUART.html
+++ b/webapp/src/ionicapp/www/templates/deviceUART.html
@@ -64,7 +64,7 @@
       </label>
       <ion-checkbox id="deviceUART-checkbox3" ng-model="data.uart.notification.endpoints.notification.enable">Send notification to </ion-checkbox>
       <label class="item item-input" id="deviceUART-input67">
-        <input type="text" placeholder="Phone number(s)" ng-model="data.uart.notification.endpoints.notification.recipients" readonly="">
+        <input type="text" placeholder="****************" ng-model="data.uart.notification.endpoints.notification.recipients" readonly="">
       </label>
       <ion-checkbox id="deviceUART-checkbox4" ng-model="data.uart.notification.endpoints.modem.enable">Send to IoT Modem </ion-checkbox>
       <label class="item item-select" id="deviceUART-select26">
