Add button to delete all peripheral sensor properties

--- a/webapp/src/ionicapp/www/templates/deviceGeneralSettings.html
+++ b/webapp/src/ionicapp/www/templates/deviceGeneralSettings.html
@@ -28,7 +28,11 @@
     </form>
     <form id="deviceGeneralSettings-form186" class="list">
       <div id="deviceGeneralSettings-markdown370" class="show-list-numbers-and-dots"></div>
-      <button id="deviceGeneralSettings-button113" ng-click="setSettings(data.devicename)" class="button button-positive button-block">Apply Settings</button>
+      <button id="deviceGeneralSettings-button113" ng-click="setSettings(data.devicename)" class="button button-positive button-block">Apply</button>
+    </form>
+    <form id="deviceGeneralSettings-form187" class="list">
+      <div id="deviceGeneralSettings-markdown334" class="show-list-numbers-and-dots"></div>
+      <button id="deviceGeneralSettings-button127" ng-click="deleteProperties(data.devicename)" class="button button-positive button-block button-outline">Reset Sensor Configurations</button>
     </form>
   </ion-content>
 </ion-view>
