Add timestamps for performance measurement

--- a/webapp/src/ionicapp/www/templates/account.html
+++ b/webapp/src/ionicapp/www/templates/account.html
@@ -8,15 +8,15 @@
       <button id="account-button51" ng-class="{'active': data.activeSection==2}" ng-click="changeSection(2)" class="button button-positive button-small button-block">Subscription</button>
     </div>
     <form id="account-form16" class="list" ng-show="data.activeSection==1">
-      <label class="item item-input item-floating-label" id="account-input43">
+      <label class="item item-input" id="account-input43">
         <span class="input-label">Name</span>
         <input type="text" placeholder="" ng-model="data.fullname">
       </label>
-      <label class="item item-input item-floating-label" id="account-input44">
+      <label class="item item-input" id="account-input44">
         <span class="input-label">Email</span>
         <input type="email" placeholder="" readonly="" ng-model="data.email">
       </label>
-      <label class="item item-input item-floating-label" id="account-input54">
+      <label class="item item-input" id="account-input54">
         <span class="input-label">Mobile Number</span>
         <input type="text" placeholder="" ng-model="data.phonenumber">
       </label>
